// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperSelectControl is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <span
        class="euiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-label="aria-label"
        aria-labelledby="undefined generated-id"
        class="euiSuperSelectControl testClass1 testClass2"
        data-test-subj="test subject string"
        role="option"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`EuiSuperSelectControl props compressed is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="euiFormControlLayout euiFormControlLayout--compressed"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <span
        class="euiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="euiSuperSelectControl euiSuperSelectControl--compressed"
        role="option"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`EuiSuperSelectControl props disabled options are rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <span
        class="euiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="euiSuperSelectControl"
        role="option"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`EuiSuperSelectControl props empty value option is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <span
        class="euiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="euiSuperSelectControl"
        role="option"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`EuiSuperSelectControl props fullWidth is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <span
        class="euiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="euiSuperSelectControl euiSuperSelectControl--fullWidth"
        role="option"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`EuiSuperSelectControl props isInvalid is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <span
        class="euiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="euiSuperSelectControl euiSuperSelectControl-isInvalid"
        role="option"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`EuiSuperSelectControl props isLoading is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <span
        class="euiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="euiSuperSelectControl euiSuperSelectControl-isLoading"
        role="option"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--medium"
        />
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`EuiSuperSelectControl props value option is rendered 1`] = `
Array [
  <input
    type="hidden"
    value="1"
  />,
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <span
        class="euiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: Option #1, is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="euiSuperSelectControl"
        role="option"
        type="button"
      >
        Option #1
      </button>
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;
